@@ -16,27 +16,29 @@
 
 package com.phonepe.ignis.leadership;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.phonepe.ignis.client.StorageClient;
-import com.phonepe.ignis.sweep.Sweeper;
+import com.phonepe.ignis.common.LoadBalancer;
+import com.phonepe.ignis.common.MagazineRegistry;
+import com.phonepe.ignis.metric.IgnisMetrics;
+import com.phonepe.ignis.scheduler.IgnisSchedulerCommands;
+import com.phonepe.ignis.scheduler.ScheduledTask;
 import com.phonepe.ignis.service.QueueService;
 import com.phonepe.ignis.storage.BaseStorage;
-import io.dropwizard.lifecycle.Managed;
+import com.phonepe.ignis.sweep.Sweeper;
+import com.phonepe.ignis.utils.Constants;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.curator.framework.CuratorFramework;
 
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.Timer;
 
 /**
  * @author shantanu.tiwari
  * Created on 14/03/22
  */
 @Slf4j
-public class TaskInitializer implements Managed {
+public class TaskInitializer {
     public static final int DELAY_FOR_SWEEPER_TASK = 15 * 60 * 1000; // 15 minutes
     private static final int INITIAL_DELAY_FOR_SWEEPER_TASK = 10 * 60 * 1000; // 10 minutes
 
@@ -46,48 +48,78 @@ public class TaskInitializer implements Managed {
     private final BaseStorage storage;
     private final StorageClient client;
     private LeaderElector leaderElector;
+    private ScheduledTask sweeperTask;
     private final String farmId;
+    private final IgnisSchedulerCommands scheduler;
+    /**
+     * True when this initializer created the scheduler and must therefore shut it down.
+     */
+    private final boolean ownsScheduler;
+    private final MagazineRegistry magazineRegistry;
+    private final IgnisMetrics metrics;
 
     public TaskInitializer(final CuratorFramework curatorFramework,
                            final QueueService queueService,
                            final String clientId,
                            final BaseStorage storage,
                            final StorageClient client,
-                           final String farmId) {
+                           final String farmId,
+                           final IgnisMetrics metrics,
+                           final IgnisSchedulerCommands scheduler,
+                           final MagazineRegistry magazineRegistry) {
+        this.magazineRegistry = magazineRegistry;
+        this.ownsScheduler = Objects.isNull(scheduler);
+        // Standalone, this is the control plane in its own right, so it gets the control pool's
+        // fixed shape rather than a growable worker pool it would never grow.
+        this.scheduler = ownsScheduler
+                ? new IgnisSchedulerCommands("ignismq-control", Constants.SCHEDULER_CONTROL_THREADS,
+                Constants.SCHEDULER_CONTROL_THREADS)
+                : scheduler;
         this.curatorFramework = curatorFramework;
         this.queueService = queueService;
         this.clientId = clientId;
         this.storage = storage;
         this.client = client;
         this.farmId = farmId;
+        this.metrics = Objects.requireNonNull(metrics, "Metrics are required.");
     }
 
-    @Override
     public void start() throws Exception {
         if (Objects.nonNull(leaderElector)) {
             log.info("Already initialised... Gracefully ignoring...");
             return;
         }
 
-        final Sweeper sweeperTask = new Sweeper(queueService, clientId, storage, client, farmId);
-        final Map<Integer, Set<LoadBalancer>> workers = ImmutableMap.of(1, ImmutableSet.of(sweeperTask));
+        final Sweeper sweeper = new Sweeper(queueService, clientId, storage, client, farmId,
+                metrics, magazineRegistry);
+        final Map<Integer, Set<LoadBalancer>> workers = Map.of(1, Set.of(sweeper));
         leaderElector = new LeaderElector(clientId, curatorFramework, workers);
         leaderElector.start();
-        scheduleSweeperTask(sweeperTask);
+        scheduleSweeperTask(sweeper);
     }
 
-    @Override
+    /**
+     * Safe to call without a preceding {@link #start()}, and safe to call twice: a framework
+     * lifecycle will invoke stop even when startup failed part way through.
+     */
     public void stop() {
+        if (Objects.nonNull(sweeperTask)) {
+            scheduler.cancelRepeating(sweeperTask);
+            sweeperTask = null;
+        }
+        if (ownsScheduler) {
+            scheduler.stop();
+        }
+        if (Objects.isNull(leaderElector)) {
+            log.info("Task initializer was never started, nothing to stop.");
+            return;
+        }
         leaderElector.stop();
+        leaderElector = null;
     }
 
-    private void scheduleSweeperTask(final Sweeper sweeperTask) {
-        // Run it as a daemon
-        final Timer sweeperTimer = new Timer();
-        sweeperTimer.schedule(
-                sweeperTask,
-                INITIAL_DELAY_FOR_SWEEPER_TASK,
-                DELAY_FOR_SWEEPER_TASK
-        );
+    private void scheduleSweeperTask(final Sweeper sweeper) {
+        sweeperTask = scheduler.scheduleRepeating(sweeper,
+                INITIAL_DELAY_FOR_SWEEPER_TASK, DELAY_FOR_SWEEPER_TASK);
     }
 }
